ssl_browser_test uses -1 as a default failure value, but -1 means CMD_TEXT_NOT_FOUND.

In ssl_browser_tests.cc, -1 is used as a default failure value,
but -1 means security_interstitials::CMD_TEXT_NOT_FOUND.
Probably change all those initializations to CMD_ERROR.

R=meacer@chromium.org

Bug: 771356
Change-Id: I2cfa73a31fd210bea45b8d238f1b18116413d4bf
Reviewed-on: https://chromium-review.googlesource.com/720336
Reviewed-by: Lucas Garron <lgarron@chromium.org>
Reviewed-by: Mustafa Emre Acer <meacer@chromium.org>
Commit-Queue: Lucas Garron <lgarron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510548}
Former-commit-id: 5be6c91896d063372a8be848f2410faed7c310cb