components/security_interstitials/core/controller_client.h
@@ -28,9 +28,9 @@ extern const char kPrivacyLinkHtml[];
 // See components/security_interstitials/core/browser/resources/
 enum SecurityInterstitialCommands {
   // Used by tests
-  CMD_ERROR = -3,
-  CMD_TEXT_FOUND = -2,
-  CMD_TEXT_NOT_FOUND = -1,
+  CMD_TEXT_FOUND = -3,
+  CMD_TEXT_NOT_FOUND = -2,
+  CMD_ERROR = -1,
   // Decisions
   CMD_DONT_PROCEED = 0,
   CMD_PROCEED = 1,
